<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arrows</string>

    <!-- Event Viewer -->
    <string name="title_activity_event_viewer">Arrows</string>
    <string name="menu_create_event">Create Event</string>
    <string name="refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="view_details">View Details</string>
    <string name="loading_blurb">Arrows connects you to the latest\nevents happening near you.</string>
    <string name="finding_location">Finding your location&#8230;</string>
    <string name="finished_loading">Ready to start!</string>
    <string name="no_location_sources">Arrows requires your location to operate.\nPlease enable a location source and retry loading.</string>
    <string name="enable_source">Enable Source</string>
    <string name="retry">Retry</string>
    <string name="view_events">View Events</string>
    
    <!-- Help Dialogs -->
    <string name="help_viewer_overview">Events near you are pinned on the map when your location is found.\n\nTapping on the events will bring up a title bubble, and more details can be found by tapping that bubble.</string>
    <string name="help_viewer_create">Create Event</string>
    <string name="help_viewer_refresh">Refresh Events</string>
    <string name="help_viewer_menuoptions">Menu Options</string>
    <string name="OK">OK</string>

    <!-- Create Event wizard -->
    <string name="event_create_image_flavor_text">Create Event Wizard</string>
    
    <string name="create_event_pagedescription_1">Hosting or attending a great event?\nLet others know by first entering some details!</string>
    <string name="create_event_pagedescription_2">When can others find and attend this event?</string>

    <string name="event_location_page_sentence_1">Here you can move the marker to select your current position.</string>
    
    <string name="title_activity_create_event">Create Event</string>
    <string name="event_name_hint">What is it called?</string>
    <string name="event_description_hint">Any more details?</string>
    <string name="link_with_facebook">Connect this event with Facebook.</string>
    <string name="facebook_message">By connecting this event with Facebook, we will post your name and profile picture on the details page for this event.</string>
    <string name="connect_facebook">Connect with Facebook</string>
    <string name="event_time_page_title">Event Time</string>
    <string name="event_time_start">Start Time:</string>
    <string name="event_time_end">End Time:</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Submit</string>
    
    <!-- My Events Page -->
    <string name="my_events_page_title">My Events</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="my_events_repost">Resubmit</string>
    <string name="my_events_forget">Forget</string>
    <string name="my_events_header">Click on Your Event to Edit It.</string>
    <string name="my_events_no_events">You have not made any events yet!\n\nEvents you create will be listed here.</string>
    <string name="active">Active</string>
    <string name="past">Past</string>

    <!-- Edit Event page -->
    <string name="edit_event_page_title">Edit Event</string>
    <string name="edit_event_title">Title:</string>
    <string name="edit_event_type">Type:</string>
    <string name="edit_event_description">Description:</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>

    <!-- Event Details page -->
    <string name="title_activity_event_details">Event Details</string>
    <string name="event_description_empty">No description given.</string>
    <string name="share">Share</string>
    <string name="event_get_directions">Get Directions</string>
    <string name="attend_event">Attend Event</string>
    <string name="join_event">Attend Event</string>
    <string name="event_report">Report Event</string>
    <string name="event_share_dialog">Please log into Facebook to share this event.</string>
    <string name="log_in_to_facebook">Sign Into Facebook</string>
    <string name="anonymous_posting">Posted by an anonymous user.</string>
    <string name="posted_by">Posted by</string>
    
    <!-- Fcebook Integration -->
        <string name="app_id">631935130155263</string>
    <plurals name="users_attending">
        <item quantity="one">1 user is attending.</item>
        <item quantity="other">%d users are attending.</item>
    </plurals>
    <plurals name="users_you_attending">
        <item quantity="one">You and 1 other user are attending.</item>
        <item quantity="other">You and %d other users are attending.</item>
    </plurals>
    
    <!-- Settings page -->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings and Arrays for the types spinner -->
    <string name="event_select_type">Select Type</string>
    <string name="event_spinner_title">Select Type of Event:</string>
    
    <!-- Dialogs -->
    <string name="filter_types_title">Filter By Type</string>
    <string name="event_report_title">What is wrong with this event?</string>
    <string name="report">Report</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- Notifications -->
    <plurals name="new_events_nearby">
        <item quantity="one">1 new event nearby</item>
        <item quantity="other">%d new events nearby</item>
    </plurals>
    <string-array name="new_event_check_intervals">
        <item>Every minute</item>
        <item>Every 5 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every hour</item>
        <item>Every two hours</item>
        <item>Every day</item>
    </string-array>
    <string-array name="new_event_check_intervalValues">
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>86400000</item>
    </string-array>

    <string-array name="type_array">
        <item>Academics</item>
        <item>Athletics</item>
        <item>Entertainment</item>
        <item>Promotions</item>
        <item>Social</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="report_reasons">
        <item>Inaccurate details</item>
        <item>Offensive details</item>
        <item>Promotes illegal activity</item>
    </string-array>

    <string-array name="relative_days">
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>

    <!-- Other strings -->
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="event_holder">No description</string>

</resources>