<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Attend the event. -->
    <item android:id="@+id/menu_attend_event"
          android:icon="@drawable/attend"
          android:title="@string/attend_event"
          android:showAsAction="always"/>

    <!-- Refresh event information. -->
    <item android:id="@+id/menu_refresh_event"
          android:icon="@drawable/refresh"
          android:title="@string/refresh"
          android:showAsAction="ifRoom"/>
    
    <!-- Retrieve directions to event. -->
    <item android:id="@+id/menu_get_directions"
          android:icon="@drawable/location_directions"
          android:title="@string/event_get_directions"
          android:showAsAction="ifRoom"/>
    
    <!-- Report event item. -->
    <item android:id="@+id/menu_report_event"
          android:title="@string/event_report"
          android:showAsAction="never"/>

</menu>
