<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">

<!-- This group lets us hide/show the visible actions easily.  -->
<group android:id="@+id/group_viewer_menuitems">

    <!-- Show the Create Event wizard. -->
    <item android:id="@+id/menu_create_event"
          android:icon="@drawable/ic_action_new"
          android:title="@string/menu_create_event"
          yourapp:showAsAction="always" />
    
    <!-- Refresh event listing. -->
    <item android:id="@+id/menu_refresh_events"
          android:icon="@drawable/refresh"
          android:title="@string/refresh"
          yourapp:showAsAction="always" />
    
</group>
    
    <!-- Show the event type filter dialog. -->
    <item android:id="@+id/menu_type_filter"
          android:title="Filter By Type"
          yourapp:showAsAction="never" />

    <!-- Edit Your Events -->
    <item android:id="@+id/menu_my_events"
          android:title="My Events"
          yourapp:showAsAction="never" />
    
    <!-- Help Button -->
    <item android:id="@+id/menu_viewer_help"
          android:title="Help"
          yourapp:showAsAction="never"/>
    
    <!-- TOS Button -->
    <item android:id="@+id/menu_viewer_tos"
          android:title="Terms of Service"
          yourapp:showAsAction="never"/>

    <!-- Settings menu -->
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          yourapp:showAsAction="never"/>

</menu>
